# fractals-in-finance-thesis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
analysis_outputs/: GAF_INTERPRETATIONS.md  README.md
analysis_outputs/analysis_apple_chapter/: aapl_multi_scale_gaf_summary.json
analysis_outputs/analysis_apple_chapter/aapl_daily/: gaf_summary.json
analysis_outputs/analysis_apple_chapter/aapl_monthly/: gaf_summary.json
analysis_outputs/analysis_apple_chapter/aapl_weekly/: gaf_summary.json
analysis_outputs/analysis_bitcoin_chapter/: btc_usd_multi_scale_gaf_summary.json
analysis_outputs/analysis_bond_chapter/: tlt_multi_scale_gaf_summary.json
analysis_outputs/analysis_forex_chapter/: eurusd_x_multi_scale_gaf_summary.json
analysis_outputs/analysis_sp500_chapter/: gspc_multi_scale_gaf_summary.json
analysis_outputs/multi_asset/: multi_asset_summary.json
analysis_outputs/sp500_daily/: sp500_summary.json
experiments/cnn/: train_cnn.py
experiments/configs/: config.yaml  run.py
experiments/vae/: train_vae.py
src/examples/: __init__.py  asset_analysis.py  multi_scale_analysis.py  multi_scale_gaf.py  plotting.py  sp500_daily_analysis.py
src/fractalfinance/: __init__.py  cli.py  plotting.py
src/fractalfinance/gaf/: gaf.py  (+3 more)
src/tests/: test_analysis_common.py  test_analysis_har.py  test_benchmarks.py  test_cli.py  test_dfa.py  test_examples.py  test_fbm.py  test_fbm_estimators.py  test_gaf.py  test_gaf_pipeline.py  test_geometry_correlation.py  test_geometry_intermittency.py  test_geometry_level_crossing.py  test_geometry_wavelet.py  test_load_yahoo.py  test_loaders.py  test_mfdfa.py  test_mmar.py  test_mmar_calib.py  test_mrw.py  test_msm.py  test_msm_forecast.py  test_multi_scale_analysis.py  test_plotting.py  test_preprocessing.py  test_risk.py  test_rs.py  test_sanity.py  test_theoretical.py  test_wtmm.py
(+54 files in other folders)
