[project]
name = "fractalfinance"
version = "0.1.0"
description = ""
authors = [
    {name = "giorgiomilani",email = "131472716+giorgiomilani@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pytest-cov (>=6.1.1,<7.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "pywavelets (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fractalfinance"
version = "0.1.0"
description = ""
authors = ["Giorg <giorgiomilanig@gmail.com>"]

packages = [{ include = "fractalfinance", from = "src" }]

[tool.poetry.dependencies]
python = "^3.13"
numpy = "*"
pandas = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"
